# summony

./: .env.example  .gitignore  README.md  design.md  design.py  example-1.ipynb  example-1.v2.ipynb  example-1.v3.ipynb  example-1.v4.ipynb  pyproject.toml  requirements.txt  wip-vsc.ipynb  wip.ipynb
src/summony/: __init__.py
src/summony/agents/: __init__.py  agents.py  deepseek_agent.py  factory.py  gemini_agent.py  serialization.py  xai_agent.py
src/summony/model_connectors/: __init__.py  anthropic_model_connector.py  deepseek_model_connector.py  factory.py  ollama_model_connector.py  xai_model_connector.py
src/summony/model_connectors/dummy_model_connector_data/simple/: 2024-10-05_21-28-03-087132_977f2fa0.json
src/summony/model_connectors/dummy_model_connector_data/streaming/: 2024-10-05_21-22-37-956804_18655314.json  2024-10-05_21-22-39-191841_71dbd1cf.json  (+1 more)
summony/: loggers.py  utils.py
summony/agents/: __init__.py  agents.py  anthropic_agent.py  dummy_agent.py  factory.py  ollama_agent.py  openai_agent.py  serialization.py
summony/model_connectors/: __init__.py  anthropic_model_connector.py  dummy_model_connector.py  gemini_model_connector.py  model_connectors.py  ollama_model_connector.py  openai_model_connector.py
summony/model_connectors/dummy_model_connector_data/simple/: 2024-10-05_21-28-01-766271_9c135caa.json  2024-10-05_21-28-02-575821_39e4936d.json  2024-10-05_21-28-03-638176_c511a9ae.json
summony/model_connectors/dummy_model_connector_data/streaming/: 2024-10-05_21-22-38-496640_c4e20cc1.json
summony/uis/: nbui.py
