[project]
name = "summony"
version = "0.1.2"
description = "Collection of tools and UIs for chatting and experimenting with multiple LLMs (via their APIs) at the same time."
package_url = "https://github.com/NeuronQ/summony"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dataclasses-json>=0.6.7",
    "ipywidgets>=8.1.5",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.36.0",
]
ollama = [
    "ollama>=0.3.3",
]
openai = [
    "openai>=1.51.2",
]
google = [
    "google-generativeai>=0.8.3",
]
groq = [
    "groq>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
